Update .gitignore with new patterns
Added additional patterns to ignore specific files.

--- a/bhagavadgita/.gitignore
+++ b/bhagavadgita/.gitignore
@@ -21,3 +21,15 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+
+# clau9-bklfo
+# c0yyf-ui0nu
+# 3fvhi-row2g
+# qpcui-heiaj
+# nkev0-wqp4h
+# 651bt-oibzo
+# 8y9p9-kmcvq
+# xronq-romme
+# iyzbb-f7vlj
+# qwew9-k4vf6
